merge final